--- a/templates/ajax/soul/user_tooltip.html.twig
+++ b/templates/ajax/soul/user_tooltip.html.twig
@@ -3,8 +3,8 @@
     <div>
         {% if is_deleted %}
             <strong class="warning">{{ 'Dieses MyHordes-Konto wurde gelöscht.'|trans({}, 'soul') }}</strong>
-        {% else %}
-        {% if not dummy %}
+        {% endif %}
+        {% if is_deleted or not dummy  %}
             {% if not during_attack %}
                 {# @var \App\Entity\User user #}
                 {% if app.user.id != user.id and not app.user.activeCitizen is null and not user.activeCitizen is null and app.user.activeCitizen.town == user.activeCitizen.town and app.user.activeCitizen.zone is null %}
@@ -15,6 +15,7 @@
             {% if is_granted("ROLE_CROW") %}
                 <span class="link" x-ajax-href="{{ path('admin_users_account_view', {id: user.id}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</span>
             {% endif %}
+            {% if not dummy %}
             <div class="link-blocks">
                 {% if not user.eternalID is null %}
                     <a class="link-block" href="https://eternal-twin.net/users/{{ user.eternalID }}">
@@ -47,6 +48,7 @@
                 {% endif %}
             </div>
 
+
             {% if super %}
                 <div class="note note-important">{{ 'Dieser Spieler ist ein Administrator auf diesem Server.'|trans({},'global') }}</div>
             {% elseif admin %}
@@ -72,7 +74,9 @@
             {% endif %}
 
             <hr class="dashed" />
+            {% endif %}
         {% endif %}
+        {% if not is_deleted %}
         <div class="row">
             <div class="cell rw-4">
                 {% if crow and dummy %}
