--- a/templates/ajax/ghost/create_town.html.twig
+++ b/templates/ajax/ghost/create_town.html.twig
@@ -157,14 +157,22 @@
                         <div class="cell padded rw-3 rw-md-6 rw-sm-12 note note-lightest">
                             <label>{{'Einstellungen'|trans({}, 'ghost')}}</label>
                         </div>
-                        <div class="cell padded rw-9 rw-md-6 rw-sm-12 mod">
-                            <input type="checkbox" name="disablexml" id="disablexml" x-payload="disablexml" /> <label for="disablexml"><strong>{{'Kein XML Feed:'|trans({}, 'ghost')}}</strong> {{'XML Feed für diese Stadt deaktivieren'|trans({}, 'ghost')}}</label>
-                        </div>
-                        {% if is_granted('ROLE_CROW') %}
-                            <div class="cell padded rw-9 rw-md-6 rw-sm-12 mod">
-                                <input type="checkbox" name="citizenalias" id="citizenalias" x-payload="citizenalias" /> <label for="citizenalias"><strong>{{'Bürger-Aliase:'|trans({}, 'ghost')}}</strong> {{'Ermöglicht dem Bürger, einen Alias anstelle seines üblichen Benutzernamens zu wählen'|trans({}, 'ghost')}}</label>
+                        <div class="cell rw-9 rw-md-6 rw-sm-12">
+                            <div class="row">
+                                <div class="cell padded rw-12 mod">
+                                    <input type="checkbox" name="disablexml" id="disablexml" x-payload="disablexml" /> <label for="disablexml"><strong>{{'Kein XML Feed:'|trans({}, 'ghost')}}</strong> {{'XML Feed für diese Stadt deaktivieren'|trans({}, 'ghost')}}</label>
+                                </div>
+                                {% if is_granted('ROLE_CROW') %}
+                                    <div class="cell padded rw-12 mod">
+                                        <input type="checkbox" name="citizenalias" id="citizenalias" x-payload="citizenalias" /> <label for="citizenalias"><strong>{{'Bürger-Aliase:'|trans({}, 'ghost')}}</strong> {{'Ermöglicht dem Bürger, einen Alias anstelle seines üblichen Benutzernamens zu wählen'|trans({}, 'ghost')}}</label>
+                                    </div>
+                                {% endif %}
+                                <div class="cell padded rw-12 mod">
+                                    <input type="checkbox" name="free_for_all" id="free_for_all" x-payload="free_for_all" /> <label for="free_for_all"><strong>{{'Seelenpunkt-Beschränkung deaktivieren:'|trans({}, 'ghost')}}</strong> {{'Jeder Spieler kann dieser Stadt beitreten, unabhängig davon wie viele Seelenpunkte er oder sie bereits erworben hat.'|trans({}, 'ghost')}}</label>
+                                </div>
                             </div>
-                        {% endif %}
+                        </div>
+
                     </div>
 
                     <h5>{{'Event-Stadt'|trans({}, 'ghost')}}</h5>
