--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -487,9 +487,17 @@ ul.subscriptions {
 
     &>span.forum-button-tooltip {
       display: none;
+
+      div.keyboard {
+        display: flex; gap: 0 2px; align-items: center; padding: 2px 0;
+        kbd {
+          font-size: 0.75rem; line-height: 0.75rem; border-radius: 2px; border-bottom: 3px solid #AAAAAA; background: #dcdcdc; color: black;
+          font-weight: bold; padding: 2px 5px;
+        }
+      }
     }
     &:hover>span.forum-button-tooltip {
-      display: block; position: absolute; left: 50%; transform: translateX(-50%); top: -2.5rem;
+      display: block; position: absolute; left: 50%; transform: translateX(-50%); bottom: calc(100% + 8px);
       z-index: 1; background-color: rgba(0, 0, 0, 0.75); padding: 2px 8px; border-radius: 8px;
       white-space: nowrap;
 
