--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -125,3 +125,9 @@ button.button-dropdown-button, div.button.button-dropdown-button, div.forum-butt
 }
 
 div.inline { display: inline-block }
+
+@keyframes delay-pointer-events {
+  0% { pointer-events: none; }
+  99% { pointer-events: none; }
+  100% { pointer-events: all; }
+}
