--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -121,7 +121,7 @@
     &:not(:hover) { color: transparent; &>* { visibility: hidden; } }
     &:hover {
       background-image: linear-gradient(-45deg, #0003 25%, #fff0 25%, #fff0 50%, #0003 50%, #0003 75%, #fff0 75%, #fff0 100%);
-      &>* { visibility: visible; }
+      &>* { animation: delay-pointer-events 500ms linear; }
     }
   }
 
