--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -123,7 +123,7 @@ x-message {
     &:before { content: " "; position: absolute; top: 5px; bottom: 5px; left: 3px; width: 4px; }
     position: relative; margin: 5px 0; box-shadow: 0 0 4px black; cursor: pointer; text-align: justify;
     padding: 5px 5px 5px 12px; background: #5c2b20; border: 1px solid #b37c4a; outline: 1px solid black; color: @myhordes-smalltext;
-    strong {
+    strong, b {
       color: white;
     }
     &.show { top: 0; opacity: 1 }
