--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -116,7 +116,7 @@
                     <button x-ajax-href="{{ path('admin_users_account_view', {id: user.id}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</button>
                 </div>
             </div>
-            {% if user.activeCitizen.alive %}
+            {% if user.activeCitizen is not null and user.activeCitizen.alive %}
             <div class="row">
                 <div class="padded cell rw-5 rw-md-6 rw-sm-12">
                     <button id="x-liver-eat"><img alt="" src="{{ asset('build/images/actions/canteen.gif') }}">{{ 'Leber fressen'|trans({},'admin') }}</button>
