--- a/templates/ajax/admin/users/account.html.twig
+++ b/templates/ajax/admin/users/account.html.twig
@@ -138,6 +138,7 @@
                                         {% if app.environment == 'dev' %}
                                             <optgroup label="Debug">
                                                 <option value="{{ url('admin_users_account_manage', {action: 'dbg_herodays', id: user.id}) }}" x-query="{{ 'Neue Anzahl:'|trans({},'admin') }}">{{ 'Heldentage setzen'|trans({},'admin') }}</option>
+                                                <option value="{{ url('admin_users_account_manage', {action: 'dbg_soulpoints', id: user.id}) }}" x-query="{{ 'Neue Anzahl:'|trans({},'admin') }}">{{ 'Seelenpunkte setzen'|trans({},'admin') }}</option>
                                             </optgroup>
                                         {% endif %}
                                     {% endif %}
