--- a/templates/ajax/soul/view_town_content.html.twig
+++ b/templates/ajax/soul/view_town_content.html.twig
@@ -1,4 +1,4 @@
-{# @var town \App\Entity\TownRankingProxy #}
+{# @var \App\Entity\TownRankingProxy town #}
 <div class="view-town">
     <h5 class="relative">
         {% if town.language is not null %}
@@ -49,13 +49,39 @@
         </div>
     {% endif %}
 
-    {% if town.disabled %}
+    {% if town.getDisableFlag() != constant("\\App\\Entity\\TownRankingProxy::DISABLE_NOTHING") %}
         <div class="row">
             <div class="cell rw-12 padded">
                 <div class="note note-warning">
-                    {{ 'Diese Stadt wurde aus dem Ranking ausgeschlossen.'|trans({},'soul') }}
+                    This town has the following sanctions:
+                    <ul>
+                    {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING')) %}
+                        <li>Ranking exclusion</li>
+                    {% endif %}
+                    {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS')) %}
+                        <li>Pictos deletion</li>
+                    {% endif %}
+                    {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) %}
+                        <li>Soul points deletion</li>
+                    {% endif %}
+                    </ul>
                     {% if is_granted('ROLE_CROW') %}
-                        <div class="button small inline" id="unrank_redact">{{ 'Ranking-Ausschluss zurücknehmen'|trans({},'admin') }}</div>
+                        {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING')) %}
+                            <div class="button small inline" x-action="unrank_redact" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING') }}">{{ 'Ranking-Ausschluss zurücknehmen'|trans({},'admin') }}</div>
+                        {% else %}
+                            <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING') }}">{{ 'Diese Stadt aus dem Ranking ausschließen'|trans({},'admin') }}</div>
+                        {% endif %}
+                        {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS')) %}
+                            <div class="button small inline" x-action="unrank_redact" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS') }}">Remove the pictos deletion</div>
+                        {% else %}
+                            <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS') }}">Delete the pictos of this town</div>
+                        {% endif %}
+                        {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) %}
+                            <div class="button small inline" x-action="unrank_redact" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS') }}">Remove the soulpoints deletion</div>
+                        {% else %}
+                            <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS') }}">Delete the soulpoints of this town</div>
+                        {% endif %}
+                        <div class="button small inline" x-action="unrank_redact" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_ALL') }}">Remove all sanctions</div>
                     {% endif %}
                 </div>
             </div>
@@ -76,8 +102,23 @@
         <div class="row">
             <div class="cell rw-12 padded">
                 <div class="button small inline" id="event">{{ 'Als Event-Stadt markieren'|trans({},'admin') }}</div>
-                <div class="button small inline" id="unrank">{{ 'Diese Stadt aus dem Ranking ausschließen'|trans({},'admin') }}</div>
+                {% if town.getDisableFlag() != constant('\\App\\Entity\\TownRankingProxy::DISABLE_ALL')  %}
+                <br />
+                {% endif %}
+                {% if not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING')) %}
+                    <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_RANKING') }}">{{ 'Diese Stadt aus dem Ranking ausschließen'|trans({},'admin') }}</div>
+                {% endif %}
+                {% if not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS')) %}
+                    <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_PICTOS') }}">Delete the pictos of this town</div>
+                {% endif %}
+                {% if not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) %}
+                    <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS') }}">Delete the soulpoints of this town</div>
+                {% endif %}
+                {% if not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_ALL')) %}
+                    <div class="button small inline" x-action="unrank" x-flag="{{ constant('\\App\\Entity\\TownRankingProxy::DISABLE_ALL') }}">Exclude the town from the soul</div>
+                {% endif %}
                 {% if not town.imported %}
+                    <br />
                     <div class="button small inline" id="relang">{{ 'Sprache wechseln'|trans({},'admin') }}</div>
                     <div class="button small inline" id="rename">{{ 'Stadtnamen regenerieren'|trans({},'admin') }}</div>
                 {% endif %}
@@ -102,21 +143,33 @@
             <div class="row {% if citizen.user.id == app.user.id or citizen.user.id == user.id %}me{% endif %}">
                 <div class="padded cell rw-1 rw-lg-2 rw-md-3 rw-sm-4">{{citizen.day}}</div>
                 <div class="padded cell rw-1 rw-lg-2 rw-md-3 rw-sm-4 town-points bold">
-                    {% if not citizen.disabled and not town.disabled and not town.event %}
+                    {% if not citizen.hasDisableFlag(constant('\\App\\Entity\\CitizenRankingProxy::DISABLE_SOULPOINTS')) and not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) and not town.event %}
                         +{{sp}}
                     {% elseif is_granted('ROLE_CROW') %}
-                        <div style="{% if citizen.disabled %}color: {% if citizen.limitedImport %}rosybrown{% else %}red{% endif %};{% endif %} {% if town.disabled or town.event %}opacity: 0.5;{% endif %}">+{{sp}}</div>
-                    {% elseif not (citizen.disabled and not citizen.limitedImport) and not town.disabled and not town.event %}
+                        <div style="{% if citizen.disabled %}color: {% if citizen.limitedImport %}rosybrown{% else %}red{% endif %};{% endif %} {% if town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) or town.event %}opacity: 0.5;{% endif %}">+{{sp}}</div>
+                    {% elseif not (citizen.hasDisableFlag(constant('\\App\\Entity\\CitizenRankingProxy::DISABLE_SOULPOINTS')) and not citizen.limitedImport) and not town.hasDisableFlag(constant('\\App\\Entity\\TownRankingProxy::DISABLE_SOULPOINTS')) and not town.event %}
                         +{{sp}}
                     {% else %}
                         +0
                     {% endif %}
                     {% if is_granted('ROLE_CROW') %}
-                        {% if not citizen.disabled %}
-                            <img x-action="unrank" x-endpoint="{{ path('admin_town_citizen_ranking_control', {tid: town.id, cid: citizen.id, act: 1}) }}" class="pointer" src="{{ asset('build/images/icons/small_remove.gif') }}" alt="del" />
+                        {% if not citizen.hasDisableFlag(constant("\\App\\Entity\\CitizenRankingProxy::DISABLE_SOULPOINTS")) %}
+                            <span>
+                                <img x-action="unrank" x-endpoint="{{ path('admin_town_citizen_ranking_control', {tid: town.id, cid: citizen.id, act: 1}) }}" x-flag="{{ constant("\\App\\Entity\\CitizenRankingProxy::DISABLE_SOULPOINTS") }}" class="pointer" src="{{ asset('build/images/icons/small_removesp.gif') }}" alt="del sp" />
+                                <div class="tooltip">Remove this citizen's Soul Points</div>
+                            </span>
                         {% elseif citizen.disabled and (citizen.resetMarker is null or is_granted('ROLE_ADMIN')) %}
-                            <img x-action="unrank" x-endpoint="{{ path('admin_town_citizen_ranking_control', {tid: town.id, cid: citizen.id, act: 0}) }}" class="pointer" src="{{ asset('build/images/icons/small_back.gif') }}" alt="re" />
+                            <span>
+                                <img x-action="unrank" x-endpoint="{{ path('admin_town_citizen_ranking_control', {tid: town.id, cid: citizen.id, act: 0}) }}" class="pointer" src="{{ asset('build/images/icons/small_back.gif') }}" alt="re" />
+                                <div class="tooltip">Rerank this citizen</div>
+                            </span>
                             {% if citizen.resetMarker is not null %}<span class="small">[R]</span>{% endif %}
+                        {% endif %}
+                        {% if not citizen.hasDisableFlag(constant("\\App\\Entity\\CitizenRankingProxy::DISABLE_SOULPOINTS")) %}
+                        <span>
+                                <img x-action="unrank" x-endpoint="{{ path('admin_town_citizen_ranking_control', {tid: town.id, cid: citizen.id, act: 1}) }}" x-flag="{{ constant("\\App\\Entity\\CitizenRankingProxy::DISABLE_RANKING") }}" class="pointer" src="{{ asset('build/images/icons/small_removernk.gif') }}" alt="del rnk" />
+                                <div class="tooltip">Remove this citizen from the ranking</div>
+                            </span>
                         {% endif %}
                     {% endif %}
                 </div>
@@ -190,9 +243,9 @@
 {% if is_granted('ROLE_CROW') %}
     <script>
         (function() {
-            $.html.addEventListenerAll('#unrank', 'click', (e,elem) => {
+            $.html.addEventListenerAll('div.button[x-action="unrank"]', 'click', (e,elem) => {
                 if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}')) return;
-                $.ajax.easySend('{{ path('admin_town_town_ranking_control', {tid: town.id, act: 1}) }}', {}, () => $.ajax.load(null, '{{ return_to|e('js') }}'));
+                $.ajax.easySend('{{ path('admin_town_town_ranking_control', {tid: town.id, act: 1}) }}', {'flag': elem.getAttribute('x-flag')}, () => $.ajax.load(null, '{{ return_to|e('js') }}'));
             });
 
             {% if not town.imported %}
@@ -208,9 +261,9 @@
                 });
             {% endif %}
 
-            $.html.addEventListenerAll('#unrank_redact', 'click', (e,elem) => {
+            $.html.addEventListenerAll('div.button[x-action="unrank_redact"]', 'click', (e,elem) => {
                 if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}')) return;
-                $.ajax.easySend('{{ path('admin_town_town_ranking_control', {tid: town.id, act: 0}) }}', {}, () => $.ajax.load(null, '{{ return_to|e('js') }}'));
+                $.ajax.easySend('{{ path('admin_town_town_ranking_control', {tid: town.id, act: 0}) }}', {'flag': elem.getAttribute('x-flag')}, () => $.ajax.load(null, '{{ return_to|e('js') }}'));
             });
 
             $.html.addEventListenerAll('#event', 'click', (e,elem) => {
